# vulnerability_analyzer

./: README.md  execute_helper.txt  pom.xml  отчет по курсачу.docx
analyzer-library/: pom.xml
analyzer-library/src/main/java/: VulnerabilityAnalyzerLauncher.java  VulnerabilityAnalyzerToolClient.java
analyzer-library/src/main/java/launcher/: VulnerabilityAnalyzerLauncher.java
analyzer-library/src/main/java/report/: CppFileReportInformation.java  ReportCreator.java  ReportInformation.java  (+1 more)
analyzer-library/src/main/resources/: general-report-file-body-template.vm  general-report-file-template.vm  general-report-headers.vm  macros.vm  report-file-body-template.vm  report-file-headers.vm  report-file-template.vm
analyzer-library/src/test/java/: BaseTest.java  FileHelperTest.java
functional-tests/: pom.xml  start.bat
functional-tests/src/1.TestCppFile/project/: main.cpp
functional-tests/src/2.TestCppProject/project/: .gitignore  CMakeLists.txt
functional-tests/src/2.TestCppProject/project/src/: breakpoint.cpp  breakpoint.h  debugger.cpp  debugger.h  main.cpp  parser.cpp  parser.h  registers.h  utility.cpp  utility.h
functional-tests/src/4.TestReaderWriter/project/: ReaderWriter.cpp
functional-tests/src/5.TestSQLInjection/project/: SQLInjection.cpp
functional-tests/src/6.TestRacingCondition/project/: RacingCondition.cpp
gui/: pom.xml
gui/src/main/java/: module-info.java
src/main/java/: VulnerabilityAnalyzerLauncher.java
src/main/java/utils/: Constants.java  CppFileParser.java  FileHelper.java
src/main/java/vulnerabilities/: Vulnerability.java
(+45 files in other folders)
